--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>io.zipcoder</groupId>
     <artifactId>MicroLabs-OOP-TooLargeTooSmall</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+    </properties>
 
 
 </project>
